added helper text to api documentation

--- a/frontend/templates/drf-yasg/redoc.html
+++ b/frontend/templates/drf-yasg/redoc.html
@@ -63,24 +63,23 @@
       </header>
       <div class="card card-body shadow-xl mx-3 mx-md-4 mt-n6">
           <div class="container">
-              <div class="section text-start">
-                  <h5 class="font-weight-bolder mt-3">What is an Application Programming Interface?</h5>
-                  <p class="pe-md-5 mb-4">
-                      There are several ways information within the database can be accessed. One accepted standard is through an
-                      Application Programming Interface, or API. An API is a structured way to allow for programmatic access of
-                      records from a database. The API is written to extract data from the database and transform it into a common
-                      format, such as JSON, in a process called serialization. For our API, we wrote the serializers within
-                      the <a href="https://www.django-rest-framework.org/">Django REST Framework</a> for every database table or
-                      custom query. We also integrated <a href="https://github.com/pennersr/django-allauth">django-allauth</a> and
-                      <a href="https://github.com/iMerica/dj-rest-auth">Dj-Rest-Auth</a> for the generation of tokens for each user.
-                      Using tokens for authentication allows us to ensure data access is secure and that transactions by a user are
-                      tracked. There are several libraries in all programming languages that are specifically tailored toward obtaining and
-                      formatting data from an API. <br>
-
-                      All API documentation are automatically generated with the <a href="https://github.com/axnsan12/drf-yasg">drf-yasg library</a>.
-                      The drf-yasg documentation includes all Create, Read, Update, and Delete (CRUD) operations.
-                  </p>
-              </div>
+              <h5 class="font-weight-bolder mt-3">What is an Application Programming Interface?</h5>
+              <p class="pe-md-5 mb-4">
+                  There are several ways information within the database can be accessed. One accepted standard is through an
+                  Application Programming Interface, or API. An API is a structured way to allow for programmatic access of
+                  records from a database. The API is written to extract data from the database and transform it into a common
+                  format, such as JSON, in a process called serialization. For our API, we wrote the serializers within
+                  the <a href="https://www.django-rest-framework.org/">Django REST Framework</a> for every database table or
+                  custom query. We also integrated <a href="https://github.com/pennersr/django-allauth">django-allauth</a> and
+                  <a href="https://github.com/iMerica/dj-rest-auth">Dj-Rest-Auth</a> for the generation of tokens for each user.
+                  Using tokens for authentication allows us to ensure data access is secure and that transactions by a user are
+                  tracked. There are several libraries in all programming languages that are specifically tailored toward obtaining and
+                  formatting data from an API.
+              </p>
+              <p class="pe-md-5 mb-4">
+                  All API documentation are automatically generated with the <a href="https://github.com/axnsan12/drf-yasg">drf-yasg library</a>.
+                  The drf-yasg documentation includes all Create, Read, Update, and Delete (CRUD) operations.
+              </p>
           </div>
       </div>
     </body>
