added helper text to api documentation

--- a/frontend/templates/drf-yasg/redoc.html
+++ b/frontend/templates/drf-yasg/redoc.html
@@ -61,7 +61,7 @@
           </div>
         </div>
       </header>
-      <div class="card card-body shadow-xl mx-3 mx-md-4 mt-n6">
+      <div class="card card-body mx-3 mx-md-4 mt-n8">
           <div class="container">
               <h5 class="font-weight-bolder mt-3">What is an Application Programming Interface?</h5>
               <p class="pe-md-5 mb-4">
