added helper text to api documentation

--- a/frontend/templates/includes/django-material-kit/navigation.html
+++ b/frontend/templates/includes/django-material-kit/navigation.html
@@ -79,7 +79,7 @@
                   <ul class="dropdown-menu dropdown-menu-end dropdown-menu-animation dropdown-md dropdown-md-responsive p-3 border-radius-lg mt-0 mt-lg-3" aria-labelledby="dropdownMenuBlocks">
                     <div class="d-none d-lg-block">
                       <li class="nav-item dropdown dropdown-hover dropdown-subitem">
-                        <a class="dropdown-item py-2 ps-3 border-radius-md" href="/main/sop.html">
+                        <a class="dropdown-item py-2 ps-3 border-radius-md" href="#" onClick="return false;">
                           <div class="w-100 d-flex align-items-center justify-content-between">
                             <div>
                               <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">SOP Documentation</h6>
@@ -101,7 +101,7 @@
                         </div>
                       </li>
                       <li class="nav-item dropdown dropdown-hover dropdown-subitem">
-                        <a class="dropdown-item py-2 ps-3 border-radius-md" href="/main/api.html">
+                        <a class="dropdown-item py-2 ps-3 border-radius-md" href="#" onClick="return false;">
                           <div class="w-100 d-flex align-items-center justify-content-between">
                             <div>
                               <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">API Documentation</h6>
