--- a/frontend/templates/includes/django-material-dashboard/sidebar.html
+++ b/frontend/templates/includes/django-material-dashboard/sidebar.html
@@ -563,6 +563,38 @@
       </li>
     {% endif %}
     </ul>
+    <hr class="horizontal light mt-0 mb-2">
+    <ul class="nav nav-fill p-1" role="tablist">
+      <li class="nav-item mt-2 col-12">
+        <h6 class="text-uppercase text-xs text-white font-weight-bolder opacity-8">MIxS</h6>
+      </li>
+    </ul>
+    <ul class="nav nav-fill p-1" role="tablist">
+      <li class="nav-item mt-2 col-8">
+        <h6 class="ps-2 ms-2 text-start text-uppercase text-xs text-white font-weight-bolder opacity-8">Water</h6>
+      </li>
+      <li class="nav-item col-1">
+        <a class="nav-link text-white mb-0 px-0 py-1 {% if 'view_mixswater' in segment %} active bg-gradient-primary {% endif %}"
+           href="{% url 'view_mixswater' %}" data-bs-toggle="tooltip" data-bs-placement="top" title="View">
+          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+            <i class="material-icons opacity-10">table_view</i>
+          </div>
+        </a>
+      </li>
+    </ul>
+    <ul class="nav nav-fill p-1" role="tablist">
+      <li class="nav-item mt-2 col-8">
+        <h6 class="ps-2 ms-2 text-start text-uppercase text-xs text-white font-weight-bolder opacity-8">Sediment</h6>
+      </li>
+      <li class="nav-item col-1">
+        <a class="nav-link text-white mb-0 px-0 py-1 {% if 'view_mixssediment' in segment %} active bg-gradient-primary {% endif %}"
+           href="{% url 'view_mixssediment' %}" data-bs-toggle="tooltip" data-bs-placement="top" title="View">
+          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+            <i class="material-icons opacity-10">table_view</i>
+          </div>
+        </a>
+      </li>
+    </ul>
     <!-- end taxonomicannotation -->
     {% endif %}
     <!-- end bioinfo -->
