--- a/frontend/templates/includes/django-material-dashboard/sidebar.html
+++ b/frontend/templates/includes/django-material-dashboard/sidebar.html
@@ -96,6 +96,60 @@
      <!-- end field survey -->
     {% endif %}
 
+    {% if perms.field_survey.view_fieldcrew %}
+    <!-- begin field crew -->
+    <ul class="nav nav-fill p-1" role="tablist">
+      <li class="nav-item mt-2 col-8">
+        <h6 class="ps-2 ms-2 text-start text-uppercase text-xs text-white font-weight-bolder opacity-8">Field Crew</h6>
+      </li>
+      <li class="nav-item col-1">
+        <a class="nav-link text-white mb-0 px-0 py-1 {% if 'view_fieldcrew' in segment %} active bg-gradient-primary {% endif %}"
+           href="{% url 'view_fieldcrew' %}" data-bs-toggle="tooltip" data-bs-placement="top" title="View">
+          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+            <i class="material-icons opacity-10">table_view</i>
+          </div>
+        </a>
+      </li>
+    </ul>
+     <!-- end field crew -->
+    {% endif %}
+
+    {% if perms.field_survey.view_watercollection  %}
+    <!-- begin water collection -->
+    <ul class="nav nav-fill p-1" role="tablist">
+      <li class="nav-item mt-2 col-8">
+        <h6 class="ps-2 ms-2 text-start text-uppercase text-xs text-white font-weight-bolder opacity-8">Water Collection</h6>
+      </li>
+      <li class="nav-item col-1">
+        <a class="nav-link text-white mb-0 px-0 py-1 {% if 'view_watercollection' in segment %} active bg-gradient-primary {% endif %}"
+           href="{% url 'view_watercollection' %}" data-bs-toggle="tooltip" data-bs-placement="top" title="View">
+          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+            <i class="material-icons opacity-10">table_view</i>
+          </div>
+        </a>
+      </li>
+    </ul>
+     <!-- end water collection -->
+    {% endif %}
+
+    {% if perms.field_survey.view_sedimentcollection   %}
+    <!-- begin sediment collection -->
+    <ul class="nav nav-fill p-1" role="tablist">
+      <li class="nav-item mt-2 col-8">
+        <h6 class="ps-2 ms-2 text-start text-uppercase text-xs text-white font-weight-bolder opacity-8">Sediment Collection</h6>
+      </li>
+      <li class="nav-item col-1">
+        <a class="nav-link text-white mb-0 px-0 py-1 {% if 'view_sedimentcollection' in segment %} active bg-gradient-primary {% endif %}"
+           href="{% url 'view_sedimentcollection' %}" data-bs-toggle="tooltip" data-bs-placement="top" title="View">
+          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+            <i class="material-icons opacity-10">table_view</i>
+          </div>
+        </a>
+      </li>
+    </ul>
+     <!-- end sediment collection -->
+    {% endif %}
+
     {% if perms.field_survey.view_filtersample %}
     <!-- begin filter sample -->
     <ul class="nav nav-fill p-1" role="tablist">
