changed help text to info class

--- a/frontend/templates/includes/django-material-dashboard/form.html
+++ b/frontend/templates/includes/django-material-dashboard/form.html
@@ -26,7 +26,7 @@
             {% endif %}
             {% if field.help_text %}
             <div class="row">
-                <div class="alert alert-primary alert-dismissible text-white" role="alert">
+                <div class="alert alert-info alert-dismissible text-white" role="alert">
                     <span class="text-sm help">{{ field.help_text|safe }}</span>
                     <button type="button" class="btn-close text-lg py-3 opacity-10" data-bs-dismiss="alert" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
