--- a/frontend/templates/includes/django-material-dashboard/sidebar.html
+++ b/frontend/templates/includes/django-material-dashboard/sidebar.html
@@ -396,77 +396,6 @@
     {% endif %}
     <!-- end wet lab -->
     {% endif %}
-    {% if perms.freezer_inventory %}
-    <!-- begin freezer inventory -->
-    <hr class="horizontal light mt-0 mb-2">
-    <ul class="nav nav-fill p-1" role="tablist">
-      <li class="nav-item mt-2 col-12">
-        <h6 class="text-uppercase text-xs text-white font-weight-bolder opacity-8">Freezer Inventory</h6>
-      </li>
-    </ul>
-    {% if perms.freezer_inventory.view_freezerinventory %}
-    <!-- begin freezerinventory -->
-    <ul class="nav nav-fill p-1" role="tablist">
-      <li class="nav-item mt-2 col-8">
-        <h6 class="ps-2 ms-2 text-start text-uppercase text-xs text-white font-weight-bolder opacity-8">Inventory</h6>
-      </li>
-      <li class="nav-item col-1">
-        <a class="nav-link text-white mb-0 px-0 py-1 {% if 'view_freezerinventory' in segment or 'detail_freezerinventory' in segment %} active bg-gradient-primary {% endif %}"
-           href="{% url 'view_freezerinventory' %}" data-bs-toggle="tooltip" data-bs-placement="top" title="View">
-          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
-            <i class="material-icons opacity-10">table_view</i>
-          </div>
-        </a>
-      </li>
-      {% if perms.freezer_inventory.add_freezerinventory %}
-      <li class="nav-item col-1">
-        <a class="nav-link text-white mb-0 px-0 py-1 {% if 'add_freezerinventory' in segment %} active bg-gradient-primary {% endif %}"
-           href="{% url 'add_freezerinventory' %}"  data-bs-toggle="tooltip" data-bs-placement="top" title="Add">
-          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
-            <i class="material-icons opacity-10">add_box</i>
-          </div>
-        </a>
-      </li>
-    {% endif %}
-    </ul>
-    <!-- end freezerinventory -->
-    {% endif %}
-    {% if perms.freezer_inventory.view_freezerinventoryreturnmetadata %}
-    <!-- begin freezerinventoryreturnmetadata -->
-    <ul class="nav nav-fill p-1" role="tablist">
-      <li class="nav-item mt-2 col-8">
-        <h6 class="ps-2 ms-2 text-start text-uppercase text-xs text-white font-weight-bolder opacity-8">Metadata</h6>
-      </li>
-      <li class="nav-item col-1">
-        <a class="nav-link text-white mb-0 px-0 py-1 {% if 'view_freezerreturnmetadata' in segment or 'detail_freezerreturnmetadata' in segment %} active bg-gradient-primary {% endif %}"
-           href="{% url 'view_freezerinventoryreturnmetadata' %}" data-bs-toggle="tooltip" data-bs-placement="top" title="View">
-          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
-            <i class="material-icons opacity-10">table_view</i>
-          </div>
-        </a>
-      </li>
-    </ul>
-    <!-- end freezerinventoryreturnmetadata -->
-    {% endif %}
-    {% if perms.freezer_inventory.view_freezerinventorylog %}
-    <!-- begin freezerinventorylog -->
-    <ul class="nav nav-fill p-1" role="tablist">
-      <li class="nav-item mt-2 col-8">
-        <h6 class="ps-2 ms-2 text-start text-uppercase text-xs text-white font-weight-bolder opacity-8">Log</h6>
-      </li>
-      <li class="nav-item col-1">
-        <a class="nav-link text-white mb-0 px-0 py-1 {% if 'view_freezerlog' in segment or 'detail_freezerlog' in segment %} active bg-gradient-primary {% endif %}"
-           href="{% url 'view_freezerinventorylog' %}" data-bs-toggle="tooltip" data-bs-placement="top" title="View">
-          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
-            <i class="material-icons opacity-10">table_view</i>
-          </div>
-        </a>
-      </li>
-    </ul>
-    <!-- end freezerinventorylog -->
-    {% endif %}
-    <!-- end freezer inventory -->
-    {% endif %}
     {% if perms.bioinfo %}
     <!-- begin bioinfo -->
     <hr class="horizontal light mt-0 mb-2">
@@ -635,6 +564,8 @@
       </li>
     {% endif %}
     </ul>
+    <!-- end taxonomicannotation -->
+    <!-- begin mixs -->
     <hr class="horizontal light mt-0 mb-2">
     <ul class="nav nav-fill p-1" role="tablist">
       <li class="nav-item mt-2 col-12">
@@ -667,9 +598,80 @@
         </a>
       </li>
     </ul>
-    <!-- end taxonomicannotation -->
+    <!-- end mixs -->
     {% endif %}
     <!-- end bioinfo -->
+    {% endif %}
+    {% if perms.freezer_inventory %}
+    <!-- begin freezer inventory -->
+    <hr class="horizontal light mt-0 mb-2">
+    <ul class="nav nav-fill p-1" role="tablist">
+      <li class="nav-item mt-2 col-12">
+        <h6 class="text-uppercase text-xs text-white font-weight-bolder opacity-8">Freezer Inventory</h6>
+      </li>
+    </ul>
+    {% if perms.freezer_inventory.view_freezerinventory %}
+    <!-- begin freezerinventory -->
+    <ul class="nav nav-fill p-1" role="tablist">
+      <li class="nav-item mt-2 col-8">
+        <h6 class="ps-2 ms-2 text-start text-uppercase text-xs text-white font-weight-bolder opacity-8">Inventory</h6>
+      </li>
+      <li class="nav-item col-1">
+        <a class="nav-link text-white mb-0 px-0 py-1 {% if 'view_freezerinventory' in segment or 'detail_freezerinventory' in segment %} active bg-gradient-primary {% endif %}"
+           href="{% url 'view_freezerinventory' %}" data-bs-toggle="tooltip" data-bs-placement="top" title="View">
+          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+            <i class="material-icons opacity-10">table_view</i>
+          </div>
+        </a>
+      </li>
+      {% if perms.freezer_inventory.add_freezerinventory %}
+      <li class="nav-item col-1">
+        <a class="nav-link text-white mb-0 px-0 py-1 {% if 'add_freezerinventory' in segment %} active bg-gradient-primary {% endif %}"
+           href="{% url 'add_freezerinventory' %}"  data-bs-toggle="tooltip" data-bs-placement="top" title="Add">
+          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+            <i class="material-icons opacity-10">add_box</i>
+          </div>
+        </a>
+      </li>
+    {% endif %}
+    </ul>
+    <!-- end freezerinventory -->
+    {% endif %}
+    {% if perms.freezer_inventory.view_freezerinventoryreturnmetadata %}
+    <!-- begin freezerinventoryreturnmetadata -->
+    <ul class="nav nav-fill p-1" role="tablist">
+      <li class="nav-item mt-2 col-8">
+        <h6 class="ps-2 ms-2 text-start text-uppercase text-xs text-white font-weight-bolder opacity-8">Metadata</h6>
+      </li>
+      <li class="nav-item col-1">
+        <a class="nav-link text-white mb-0 px-0 py-1 {% if 'view_freezerreturnmetadata' in segment or 'detail_freezerreturnmetadata' in segment %} active bg-gradient-primary {% endif %}"
+           href="{% url 'view_freezerinventoryreturnmetadata' %}" data-bs-toggle="tooltip" data-bs-placement="top" title="View">
+          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+            <i class="material-icons opacity-10">table_view</i>
+          </div>
+        </a>
+      </li>
+    </ul>
+    <!-- end freezerinventoryreturnmetadata -->
+    {% endif %}
+    {% if perms.freezer_inventory.view_freezerinventorylog %}
+    <!-- begin freezerinventorylog -->
+    <ul class="nav nav-fill p-1" role="tablist">
+      <li class="nav-item mt-2 col-8">
+        <h6 class="ps-2 ms-2 text-start text-uppercase text-xs text-white font-weight-bolder opacity-8">Log</h6>
+      </li>
+      <li class="nav-item col-1">
+        <a class="nav-link text-white mb-0 px-0 py-1 {% if 'view_freezerlog' in segment or 'detail_freezerlog' in segment %} active bg-gradient-primary {% endif %}"
+           href="{% url 'view_freezerinventorylog' %}" data-bs-toggle="tooltip" data-bs-placement="top" title="View">
+          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+            <i class="material-icons opacity-10">table_view</i>
+          </div>
+        </a>
+      </li>
+    </ul>
+    <!-- end freezerinventorylog -->
+    {% endif %}
+    <!-- end freezer inventory -->
     {% endif %}
   </div>
   <hr class="horizontal light mt-0 mb-2">
