added additional background information to frontend field site and sample label templates

--- a/frontend/templates/home/django-material-dashboard/model-add-fieldsite.html
+++ b/frontend/templates/home/django-material-dashboard/model-add-fieldsite.html
@@ -31,7 +31,7 @@
     <div class="row">
         <h3>Naming Convention for Site IDs</h3>
         <div class="col-md-6 col-12 my-auto">
-            <h5>pRR_SCC</h5>
+            <h5>pRR_SCC or pRRR_SCC</h5>
             <table class="table align-items-center mb-0">
                 <caption style="text-align:start; caption-side:top;">Where:</caption>
                 <tbody>
@@ -50,7 +50,7 @@
                     <tr>
                       <td class="align-middle text-center">
                         <div class="d-flex align-items-center">
-                          <span class="me-2 text-xs">RR</span>
+                          <span class="me-2 text-xs">RR or RRR</span>
                         </div>
                       </td>
                         <td class="align-middle text-center">
@@ -88,6 +88,7 @@
         </div>
         <div class="col-md-6 col-12 my-auto">
             <img class="w-100 border-radius-lg shadow-lg" src="{% static 'assets/img/naming-convention-field-site.png' %}" alt="field site naming convention">
+            <img class="w-100 border-radius-lg shadow-lg" src="{% static 'assets/img/naming-convention-field-site_v2.png' %}" alt="field site naming convention">
         </div>
     </div>
     <div class="row">
@@ -117,6 +118,32 @@
                 </blockquote>
                 <figcaption class="blockquote-footer ps-3">Described in the <cite title="USGS Watershed Boundary Dataset Website">USGS Watershed Boundary Dataset Website</cite></figcaption>
                 <a target="_blank" href="https://www.usgs.gov/core-science-systems/ngp/national-hydrography/watershed-boundary-dataset?qt-science_support_page_related_con=4#qt-science_support_page_related_con" class="text-info icon-move-right">More about the Water Boundary Dataset (WBD)
+                    <i class="fas fa-arrow-right text-sm ms-1"></i>
+                </a>
+            </figure>
+        </div>
+    </div>
+        <div class="row">
+        <div class="col-md-12 col-12 my-auto">
+            <h3>Natural Earth Marine Areas</h3>
+                <p class="pe-md-5 mb-4">
+                    The regions used to define unique Site IDs that extend beyond the USGS Water Boundary Dataset were
+                    derived from Natural Earth's Marine Areas. For more information, please visit the
+                    <a target="_blank" href="https://www.naturalearthdata.com/downloads/10m-physical-vectors/10m-physical-labels/">Natural Earth website</a>.
+                </p>
+            <figure>
+                <blockquote class="blockquote">
+                    <p class="ps-2">
+                        "Primarily derived from Patterson’s Physical Map of the World. Polygons defined by international
+                        team of volunteers. Marine Regions is a standard list of marine georeferenced place names and
+                        areas. It integrates and serves geographic information from the VLIMAR Gazetteer and the MARBOUND
+                        database and proposes a standard of marine georeferenced locations, boundaries and regions.
+                        25,371 marine georeferenced places, 32,484 marine place names, 5,595 polygons of geographic places,
+                        12 marine geographic regional/global classifications, Maritime Boundaries (EEZ) of the world"
+                    </p>
+                </blockquote>
+                <figcaption class="blockquote-footer ps-3">Described in the <cite title="Natural Earth Physical Labels">Natural Earth Website</cite></figcaption>
+                <a target="_blank" href="https://www.naturalearthdata.com/downloads/10m-physical-vectors/10m-physical-labels/" class="text-info icon-move-right">More about Natural Earth Physical Labels
                     <i class="fas fa-arrow-right text-sm ms-1"></i>
                 </a>
             </figure>
