--- a/frontend/templates/home/django-material-dashboard/model-add-samplelabelrequest.html
+++ b/frontend/templates/home/django-material-dashboard/model-add-samplelabelrequest.html
@@ -29,7 +29,7 @@
             for further instructions.
         </p>
         <div class="col-md-4 col-12 my-auto">
-            <h5>pRR_SCC_YYm_CCCC</h5>
+            <h5>pRR_SCC_YYm_CCCC or pRRR_SCC_YYm_CCCC</h5>
             <table class="table align-items-center mb-0">
                 <caption style="text-align:start; caption-side:top;">Where:</caption>
                 <tbody>
@@ -48,7 +48,7 @@
                     <tr>
                       <td class="align-middle text-center">
                         <div class="d-flex align-items-center">
-                          <span class="me-2 text-xs">RR</span>
+                          <span class="me-2 text-xs">RR or RRR</span>
                         </div>
                       </td>
                         <td class="align-middle text-center">
@@ -122,6 +122,7 @@
         </div>
         <div class="col-md-8 col-12 my-auto">
             <img class="w-100 border-radius-lg shadow-lg" src="{% static 'assets/img/naming-convention-sample-label.png' %}" alt="sample label naming convention">
+            <img class="w-100 border-radius-lg shadow-lg" src="{% static 'assets/img/naming-convention-sample-label_v2.png' %}" alt="sample label naming convention v2">
         </div>
     </div>
 </div>
