added additional background information to model-add-fieldsite template

--- a/frontend/templates/home/django-material-dashboard/model-add-fieldsite.html
+++ b/frontend/templates/home/django-material-dashboard/model-add-fieldsite.html
@@ -95,8 +95,9 @@
         <div class="col-md-12 col-12 my-auto">
             <h3>Watershed Boundary Dataset</h3>
                 <p class="pe-md-5 mb-4">
-                    The regions used to define unique Site IDs are from the United States Geological Survey (USGS) Watershed
-                    Boundary Dataset (WBD) hydrologic unit code 8 (HUC8). For more information, please visit the
+                    The regions used to define unique Site IDs were derived from the United States Geological Survey (USGS) Watershed
+                    Boundary Dataset (WBD) hydrologic unit code 8 (HUC8). These watersheds were simplified with the
+                    Douglas-Peucker algorithm at a tolerance of 100 meters. For more information on the WBD, please visit the
                     <a target="_blank" href="https://www.usgs.gov/core-science-systems/ngp/national-hydrography/watershed-boundary-dataset?qt-science_support_page_related_con=4#qt-science_support_page_related_con">USGS WBD website</a>.
                     Basing naming conventions on hydrologic units were adopted from the
                     <a target="_blank" href="https://doi.org/10.2737/RDS-2018-0010">U.S. Forest Service eDNAtlas database</a>.
