updated about-us frontend template

--- a/frontend/templates/home/django-material-kit/about-us.html
+++ b/frontend/templates/home/django-material-kit/about-us.html
@@ -230,7 +230,7 @@
                 <div class="col-lg-8 col-md-6 col-12 my-auto">
                   <div class="card-body ps-lg-0">
                     <h5 class="mb-0">Geneva York</h5>
-                    <h6 class="text-info">Laboratory Manager, Environmental DNA Laboratory, University of Maine</h6>
+                    <h6 class="text-info">Environmental DNA Specialist, eDNA Laboratory, University of Maine</h6>
                     <p class="mb-0">Using environmental DNA to detect invasive species in Maine waters.</p>
                   </div>
                 </div>
