--- a/frontend/templates/includes/django-material-dashboard/filter-plugin.html
+++ b/frontend/templates/includes/django-material-dashboard/filter-plugin.html
@@ -5,7 +5,7 @@
     <a class="fixed-plugin-button text-dark position-fixed px-3 py-2">
       <i class="fa fa-filter"></i>
     </a>
-    <div class="card shadow-lg">
+    <div class="card shadow-lg bg-gradient-dark bg-white">
       <div class="card-header pb-0 pt-3">
         <div class="float-start">
           <h5 class="mt-3 mb-0">{{ page_title|title }} Filter</h5>
